src/test/ui/mir/issue-80742.stderr
error[E0080]: evaluation of constant value failed
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
   |
LL |     intrinsics::size_of::<T>()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     size_of called on unsized type `dyn Debug`
   |     inside `std::mem::size_of::<dyn Debug>` at $SRC_DIR/core/src/mem/mod.rs:LL:COL
   | 
  ::: $DIR/issue-80742.rs:23:10
   |
LL |     [u8; size_of::<T>() + 1]: ,
   |          -------------- inside `Inline::<dyn Debug>::{constant#0}` at $DIR/issue-80742.rs:23:10

error[E0599]: the function or associated item `new` exists for struct `Inline<dyn Debug>`, but its trait bounds were not satisfied
  --> $DIR/issue-80742.rs:31:36
   |
LL | / struct Inline<T>
LL | | where
LL | |     [u8; size_of::<T>() + 1]: ,
LL | | {
LL | |     _phantom: PhantomData<T>,
LL | |     buf: [u8; size_of::<T>() + 1],
LL | | }
   | |_- function or associated item `new` not found for this
...
LL |       let dst = Inline::<dyn Debug>::new(0);
   |                                      ^^^ function or associated item cannot be called on `Inline<dyn Debug>` due to unsatisfied trait bounds
   | 
  ::: $SRC_DIR/core/src/fmt/mod.rs:LL:COL
   |
LL |   pub trait Debug {
   |   --------------- doesn't satisfy `dyn Debug: Sized`
   |
   = note: the following trait bounds were not satisfied:
           `dyn Debug: Sized`

error[E0080]: evaluation of constant value failed
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
   |
LL |     intrinsics::size_of::<T>()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     size_of called on unsized type `dyn Debug`
   |     inside `std::mem::size_of::<dyn Debug>` at $SRC_DIR/core/src/mem/mod.rs:LL:COL
   | 
  ::: $DIR/issue-80742.rs:15:10
   |
LL |     [u8; size_of::<T>() + 1]: ,
   |          -------------- inside `Inline::<dyn Debug>::{constant#0}` at $DIR/issue-80742.rs:15:10

error[E0277]: the size for values of type `dyn Debug` cannot be known at compilation time
  --> $DIR/issue-80742.rs:31:15
   |
LL | struct Inline<T>
   |               - required by this bound in `Inline`
...
LL |     let dst = Inline::<dyn Debug>::new(0);
   |               ^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `dyn Debug`
help: consider relaxing the implicit `Sized` restriction
   |
LL | struct Inline<T: ?Sized>
   |                ^^^^^^^^

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0080, E0277, E0599.
For more information about an error, try `rustc --explain E0080`.
